# XiaoLouAI

./: .env.compose.example  .gitignore  README.md  README.zh-CN.md  XIAOLOU_REFACTOR_HANDOFF.md  docker-compose.yml
XIAOLOU-main/: .env.example  README.en.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
XIAOLOU-main/scripts/: precompress-dist.mjs
XIAOLOU-main/src/: App.tsx  index.css  main.tsx
caddy/: Caddyfile  DEPLOY.md
control-plane-dotnet/: README.md  README.zh-CN.md  XiaoLou.ControlPlane.sln
core-api/: .env.example  .env.postgres.example  README.md  README.zh-CN.md  package-lock.json  package.json
core-api/db/: POSTGRES_NETWORK.md  init-root.psql
core-api/scripts/: backup-sqlite.js  migrate-jaaz-sqlite-to-postgres.js  migrate-postgres.js  migrate-vr-sqlite-to-postgres.js  migrate-windows-native-core.js  normalize_canvas_workflow_models.js  verify-legacy-canonical-projection.js  verify-postgres.js  verify.js
core-api/src/: aliyun.js  canvas-library.js  control-api-client-assertion.js  env.js  google-auth.js  http.js  jaaz-asset-sync.js  jaaz-services.js  local-loopback-request.js  mock-data.js  postgres-schema.js  postgres-store.js  process-tree.js  qwen-omni.js  routes.js  server.js  sqlite-store.js  store.js  uploads.js  vertex.js  (+1 more)
jaaz/: README-zh.md  README.md  README_zh.md
scripts/: generate-model-workbook.js  install_autostart.cmd  openwebui-api-rewrite.js  openwebui-custom.css  openwebui-theme-sync.js  openwebui.env.example  pull-local-compose-images.ps1  reap_stale_create_tasks.cjs  seed_4_assets.js  setup_video_replace.cmd  smoke_source_module.js  start_background.cmd  start_background.ps1  start_caddy.cmd  start_core_api.cmd  start_openwebui.cmd  start_xiaolou_dev.cmd  start_xiaolou_preview.cmd  start_xiaolou_stack.cmd  status.ps1  stop_all.ps1  update-model-workbook.ps1
services/api/: .env.example  README.md  README.zh-CN.md  pyproject.toml
services/api/alembic/: env.py
services/api/app/: __init__.py  config.py  logging.py  main.py  schemas.py
services/api/app/api/routes/: admin.py  payments.py  tasks.py  video_replace.py
services/api/app/providers/: local_image.py  local_video.py
services/api/app/services/: audit.py  task_orchestration.py  video_replace.py  wallets.py
services/api/app/workers/: __init__.py  celery_app.py  tasks.py
services/api/tests/: test_health.py  test_models.py  test_payments.py  test_providers.py  test_video_replace.py  test_workers.py
video-replace-service/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  run_api.py  vr_detect_cli.py  vr_pipeline_cli.py  vr_probe_cli.py
video-replace-service/app/: __init__.py  config.py  deps.py  main.py
video-replace-service/app/services/: cv2_io.py  replace_runner.py  tasks_db.py  video.py
video-replace-service/app/workers/: proc_utils.py  queue.py
video-replace-service/app/workers/models/: __init__.py  vace_replacer.py  yolo_detector.py
video-replace-service/scripts/: _check_status.py  _check_zombie.py  _cleanup_orphans.py  _inject_zombie_pipeline.py  _smoke_subprocess_reap.py  _verify_reap.py  download_weights.py  e2e_smoke.py  e2e_smoke_v2.py  smoke_full_pipeline.py
(+426 files in other folders)
